Details
-
Bug
-
Status: Closed
-
P2
-
Resolution: Fixed
-
10, 11
-
b03
Description
# Internal Error (/home/wish/Projects/JVMTesting/openjdk/hs/src/hotspot/share/opto/node.hpp:821), pid=5741, tid=5769
# assert(is_Loop()) failed: invalid node class
Current CompileTask:
C2: 3321 365 b C0::_main (126 bytes)
Stack: [0x00007f7bdb023000,0x00007f7bdb124000], sp=0x00007f7bdb11e1a0, free space=1004k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x16c4d9e] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x4ce
V [libjvm.so+0x16c590f] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
V [libjvm.so+0xab51f2] report_vm_error(char const*, int, char const*, char const*, ...)+0x112
V [libjvm.so+0x112f07e] Node::as_Loop() const [clone .part.74]+0x2e
V [libjvm.so+0x1133c22] PhaseIdealLoop::try_move_store_before_loop(Node*, Node*)+0x652
V [libjvm.so+0x11340de] PhaseIdealLoop::split_if_with_blocks_pre(Node*)+0xbe
V [libjvm.so+0x11359f3] PhaseIdealLoop::split_if_with_blocks(VectorSet&, Node_Stack&)+0x133
V [libjvm.so+0x112dff2] PhaseIdealLoop::build_and_optimize(bool, bool)+0x10c2
V [libjvm.so+0xa142c1] Compile::Optimize()+0x321
V [libjvm.so+0xa16052] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x1172
V [libjvm.so+0x81f03b] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x2db
V [libjvm.so+0xa22f5e] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x55e
V [libjvm.so+0xa244c8] CompileBroker::compiler_thread_loop()+0x408
V [libjvm.so+0x1610ce2] JavaThread::thread_main_inner()+0x1e2
V [libjvm.so+0x1349462] thread_native_entry(Thread*)+0x112
http://mail.openjdk.java.net/pipermail/hotspot-compiler-dev/2018-February/028249.html
# assert(is_Loop()) failed: invalid node class
Current CompileTask:
C2: 3321 365 b C0::_main (126 bytes)
Stack: [0x00007f7bdb023000,0x00007f7bdb124000], sp=0x00007f7bdb11e1a0, free space=1004k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x16c4d9e] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x4ce
V [libjvm.so+0x16c590f] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
V [libjvm.so+0xab51f2] report_vm_error(char const*, int, char const*, char const*, ...)+0x112
V [libjvm.so+0x112f07e] Node::as_Loop() const [clone .part.74]+0x2e
V [libjvm.so+0x1133c22] PhaseIdealLoop::try_move_store_before_loop(Node*, Node*)+0x652
V [libjvm.so+0x11340de] PhaseIdealLoop::split_if_with_blocks_pre(Node*)+0xbe
V [libjvm.so+0x11359f3] PhaseIdealLoop::split_if_with_blocks(VectorSet&, Node_Stack&)+0x133
V [libjvm.so+0x112dff2] PhaseIdealLoop::build_and_optimize(bool, bool)+0x10c2
V [libjvm.so+0xa142c1] Compile::Optimize()+0x321
V [libjvm.so+0xa16052] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x1172
V [libjvm.so+0x81f03b] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x2db
V [libjvm.so+0xa22f5e] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x55e
V [libjvm.so+0xa244c8] CompileBroker::compiler_thread_loop()+0x408
V [libjvm.so+0x1610ce2] JavaThread::thread_main_inner()+0x1e2
V [libjvm.so+0x1349462] thread_native_entry(Thread*)+0x112
http://mail.openjdk.java.net/pipermail/hotspot-compiler-dev/2018-February/028249.html
Attachments
Issue Links
- relates to
-
JDK-8186027 C2: loop strip mining
-
- Resolved
-