8197563: assert(is_Loop()) crash in PhaseIdealLoop::try_move_store_before_loop()

Don't move store out of the loop if head is not a LoopNode.

Reviewed-by: kvn, thartmann